@@ -8,7 +8,9 @@ import com.bananarepublic.model.board.Path;
 import com.bananarepublic.model.board.TerrainType;
 import com.bananarepublic.model.building.BuildingType;
 import com.bananarepublic.model.harbor.Harbor;
+import com.bananarepublic.model.harbor.SpecificHarbor;
 import com.bananarepublic.model.player.PlayerColor;
+import com.bananarepublic.model.resource.ResourceType;
 import com.bananarepublic.service.board.StandardBoardFactory;
 import javafx.geometry.Point2D;
 import javafx.scene.Group;
@@ -36,12 +38,20 @@ import java.util.List;
 import java.util.Map;
 
 public final class HexBoard extends Pane {
+    public record PathSegment(Point2D start, Point2D end) {}
+
+    private static final Image BOARD_BACKGROUND = loadImage("/images/board/tiles/SAND.png");
     private static final double HEX_SIZE = 72;
     private static final double HEX_WIDTH = Math.sqrt(3.0) * HEX_SIZE;
     private static final double HEX_HEIGHT = HEX_SIZE * 2.0;
-    private static final double PIPE_INSET = 16;
-    private static final double HARBOR_DOCK_DISTANCE = 26;
-    private static final double HARBOR_SIGN_DISTANCE = 88;
+    private static final double SHORE_OUTSET = 18;
+    private static final double PIPE_INSET = 10;
+    private static final double HARBOR_SIGN_DISTANCE = 98;
+    private static final double HARBOR_DOCK_LENGTH = 38;
+    private static final double HARBOR_COAST_INSET = 9;
+    private static final double HARBOR_COAST_OUTSET = 3;
+    private static final double HARBOR_COLLISION_STEP = 20;
+    private static final double HARBOR_EDGE_PADDING = 18;
     private static final int[] ROW_COLUMNS = {3, 4, 5, 4, 3};
     private static final DropShadow TOKEN_SHADOW = new DropShadow(3, Color.color(0, 0, 0, 0.25));
     private static final Map<TerrainType, TerrainVisual> TERRAIN_VISUALS = createTerrainVisuals();
@@ -70,11 +80,37 @@ public final class HexBoard extends Pane {
         String robberTileId = state != null ? state.getNimonTileId() : findDefaultRobberTile(board);
 
         layoutGeometry(board);
-        drawBackdrop();
-        drawHarbors(board);
+        drawBackdrop(board);
         drawTiles(board, robberTileId);
+        drawHarbors(board);
         drawPipes(board);
         drawBuildings(board);
+    }
+
+    public Point2D getIntersectionPoint(String intersectionId) {
+        Point2D point = intersectionPoints.get(intersectionId);
+        return point == null ? null : new Point2D(point.getX(), point.getY());
+    }
+
+    public Point2D getTileCenter(String tileId) {
+        Point2D point = tileCenters.get(tileId);
+        return point == null ? null : new Point2D(point.getX(), point.getY());
+    }
+
+    public PathSegment getPathSegment(Path path) {
+        Point2D a = intersectionPoints.get(path.getEndpointA().getId());
+        Point2D b = intersectionPoints.get(path.getEndpointB().getId());
+        if (a == null || b == null) {
+            return null;
+        }
+        return new PathSegment(
+                insetPoint(a, b, PIPE_INSET),
+                insetPoint(b, a, PIPE_INSET)
+        );
+    }
+
+    public double getHexRadius() {
+        return HEX_SIZE;
     }
 
     private void layoutGeometry(Board board) {
@@ -104,16 +140,45 @@ public final class HexBoard extends Pane {
         );
     }
 
-    private void drawBackdrop() {
-        Rectangle ocean = new Rectangle(0, 0, boardWidth, boardHeight);
-        ocean.setFill(Color.web("#0f4d74"));
-        getChildren().add(ocean);
-
-        for (int i = 0; i < 6; i++) {
-            Circle bubble = new Circle(42 + i * 165, 54 + (i % 2) * 36, 18 + (i % 3) * 6);
-            bubble.setFill(Color.color(1, 1, 1, 0.08));
-            getChildren().add(bubble);
+    private void drawBackdrop(Board board) {
+        List<Point2D> shoreline = board.getIntersections().stream()
+                .filter(this::isCoastalIntersection)
+                .map(intersection -> intersectionPoints.get(intersection.getId()))
+                .filter(point -> point != null)
+                .sorted(Comparator.comparingDouble(this::polarAngle))
+                .map(this::pushOutwardFromCenter)
+                .toList();
+        if (shoreline.size() < 3) {
+            return;
         }
+
+        Polygon backdrop = new Polygon();
+        double minX = Double.POSITIVE_INFINITY;
+        double minY = Double.POSITIVE_INFINITY;
+        double maxX = Double.NEGATIVE_INFINITY;
+        double maxY = Double.NEGATIVE_INFINITY;
+        for (Point2D point : shoreline) {
+            backdrop.getPoints().addAll(point.getX(), point.getY());
+            minX = Math.min(minX, point.getX());
+            minY = Math.min(minY, point.getY());
+            maxX = Math.max(maxX, point.getX());
+            maxY = Math.max(maxY, point.getY());
+        }
+
+        if (BOARD_BACKGROUND != null) {
+            backdrop.setFill(new ImagePattern(
+                    BOARD_BACKGROUND,
+                    minX,
+                    minY,
+                    Math.max(1, maxX - minX),
+                    Math.max(1, maxY - minY),
+                    false
+            ));
+        } else {
+            backdrop.setFill(Color.web("#d7bb7b"));
+        }
+        backdrop.setOpacity(0.92);
+        getChildren().add(backdrop);
     }
 
     private void drawTiles(Board board, String robberTileId) {
@@ -184,46 +249,71 @@ public final class HexBoard extends Pane {
 
     private void drawHarbors(Board board) {
         List<Harbor> harbors = board.getHarbors().stream()
-                .sorted(Comparator.comparingInt(harbor -> numericSuffix(harbor.getId())))
+                .sorted(Comparator.comparingDouble(this::harborAngle))
                 .toList();
+        List<HarborBounds> occupiedSigns = new ArrayList<>();
 
         for (Harbor harbor : harbors) {
             Point2D a = intersectionPoints.get(harbor.getAttachedPath().getEndpointA().getId());
             Point2D b = intersectionPoints.get(harbor.getAttachedPath().getEndpointB().getId());
+            if (a == null || b == null) {
+                continue;
+            }
             Point2D midpoint = a.midpoint(b);
             Point2D outward = resolveHarborOutward(harbor, midpoint);
-            Point2D dock = midpoint.add(outward.multiply(HARBOR_DOCK_DISTANCE));
-            Point2D sign = midpoint.add(outward.multiply(HARBOR_SIGN_DISTANCE));
+            Point2D tangent = b.subtract(a).normalize();
+            Point2D tangentialOutward = tangent.dotProduct(midpoint.subtract(boardCenter())) >= 0
+                    ? tangent
+                    : tangent.multiply(-1);
+            double plateWidth = harbor.getRatio() == 3 ? 96 : 104;
+            double plateHeight = 46;
+            Point2D sign = placeHarborSign(
+                    midpoint.add(outward.multiply(HARBOR_SIGN_DISTANCE)),
+                    tangentialOutward,
+                    outward,
+                    plateWidth,
+                    plateHeight,
+                    occupiedSigns
+            );
+            Point2D dockDirection = sign.subtract(midpoint);
+            if (dockDirection.magnitude() == 0) {
+                dockDirection = outward;
+            }
+            dockDirection = dockDirection.normalize();
             Color accent = harborAccent(harbor);
 
-            Line bridge = new Line(midpoint.getX(), midpoint.getY(), dock.getX(), dock.getY());
-            bridge.setStroke(Color.web("#7b532a"));
-            bridge.setStrokeWidth(10);
-            bridge.setStrokeLineCap(StrokeLineCap.ROUND);
-            getChildren().add(bridge);
+            Point2D coastA = harborCoastAnchor(a, midpoint, outward);
+            Point2D coastB = harborCoastAnchor(b, midpoint, outward);
+            drawHarborDock(coastA, dockDirection);
+            drawHarborDock(coastB, dockDirection);
 
-            Rectangle plate = new Rectangle(sign.getX() - 36, sign.getY() - 16, 72, 32);
-            plate.setArcWidth(8);
-            plate.setArcHeight(8);
+            Rectangle plate = new Rectangle(sign.getX() - plateWidth / 2.0, sign.getY() - plateHeight / 2.0, plateWidth, plateHeight);
+            plate.setArcWidth(12);
+            plate.setArcHeight(12);
             plate.setFill(accent);
             plate.setStroke(Color.web("#3e2410"));
-            plate.setStrokeWidth(1.5);
+            plate.setStrokeWidth(2);
+            plate.setEffect(new DropShadow(8, Color.color(0, 0, 0, 0.22)));
             getChildren().add(plate);
 
             Text ratio = new Text(harbor.getRatio() + ":1");
-            ratio.setFont(Font.font("Georgia", FontWeight.BOLD, 12));
+            ratio.setFont(Font.font("Georgia", FontWeight.BOLD, 16));
             ratio.setFill(Color.web("#21140a"));
             ratio.setX(sign.getX() - ratio.getLayoutBounds().getWidth() / 2.0);
-            ratio.setY(sign.getY() - 2);
+            ratio.setY(sign.getY() - 4);
             getChildren().add(ratio);
 
-            String display = abbreviateHarborName(harbor.getDisplayName());
-            Text label = new Text(display);
-            label.setFont(Font.font("Georgia", FontWeight.BOLD, 8));
-            label.setFill(Color.web("#21140a"));
-            label.setX(sign.getX() - label.getLayoutBounds().getWidth() / 2.0);
-            label.setY(sign.getY() + 10);
-            getChildren().add(label);
+            Group harborIcon = createHarborIcon(harbor);
+            harborIcon.setLayoutX(sign.getX());
+            harborIcon.setLayoutY(sign.getY() + 14);
+            getChildren().add(harborIcon);
+
+            occupiedSigns.add(new HarborBounds(
+                    sign.getX() - plateWidth / 2.0,
+                    sign.getY() - plateHeight / 2.0,
+                    sign.getX() + plateWidth / 2.0,
+                    sign.getY() + plateHeight / 2.0
+            ));
         }
     }
 
@@ -247,15 +337,15 @@ public final class HexBoard extends Pane {
             Color color = playerFill(path.getPipe().orElseThrow().getOwner().getColor());
             Color edge = playerEdge(path.getPipe().orElseThrow().getOwner().getColor());
 
-            Line shadow = new Line(start.getX() + 1.5, start.getY() + 3, end.getX() + 1.5, end.getY() + 3);
+            Line shadow = new Line(start.getX() + 1.75, start.getY() + 3.5, end.getX() + 1.75, end.getY() + 3.5);
             shadow.setStroke(Color.color(0, 0, 0, 0.25));
-            shadow.setStrokeWidth(9);
+            shadow.setStrokeWidth(10.5);
             shadow.setStrokeLineCap(StrokeLineCap.ROUND);
             getChildren().add(shadow);
 
             Line pipe = new Line(start.getX(), start.getY(), end.getX(), end.getY());
             pipe.setStroke(color);
-            pipe.setStrokeWidth(8.5);
+            pipe.setStrokeWidth(10);
             pipe.setStrokeLineCap(StrokeLineCap.ROUND);
             pipe.setEffect(new DropShadow(2, edge));
             getChildren().add(pipe);
@@ -290,25 +380,25 @@ public final class HexBoard extends Pane {
         Color fill = playerFill(color);
         Color edge = playerEdge(color);
 
-        Circle shadow = new Circle(point.getX(), point.getY() + 10, 8, Color.color(0, 0, 0, 0.22));
+        Circle shadow = new Circle(point.getX(), point.getY() + 12, 10, Color.color(0, 0, 0, 0.22));
         group.getChildren().add(shadow);
 
-        Rectangle body = new Rectangle(point.getX() - 9, point.getY() - 4, 18, 16);
+        Rectangle body = new Rectangle(point.getX() - 11, point.getY() - 5, 22, 18);
         body.setArcWidth(4);
         body.setArcHeight(4);
         body.setFill(fill);
         body.setStroke(edge);
-        body.setStrokeWidth(1.8);
+        body.setStrokeWidth(2);
         group.getChildren().add(body);
 
         Polygon roof = new Polygon(
-                point.getX() - 11, point.getY() - 4,
-                point.getX(), point.getY() - 14,
-                point.getX() + 11, point.getY() - 4
+                point.getX() - 13, point.getY() - 5,
+                point.getX(), point.getY() - 18,
+                point.getX() + 13, point.getY() - 5
         );
         roof.setFill(edge);
         roof.setStroke(Color.web("#120d07"));
-        roof.setStrokeWidth(1.3);
+        roof.setStrokeWidth(1.5);
         group.getChildren().add(roof);
 
         getChildren().add(group);
@@ -319,26 +409,26 @@ public final class HexBoard extends Pane {
         Color fill = playerFill(color).deriveColor(0, 1, 0.92, 1);
         Color edge = playerEdge(color);
 
-        Circle shadow = new Circle(point.getX() + 2, point.getY() + 12, 10, Color.color(0, 0, 0, 0.22));
+        Circle shadow = new Circle(point.getX() + 2, point.getY() + 14, 12, Color.color(0, 0, 0, 0.22));
         group.getChildren().add(shadow);
 
-        Rectangle body = new Rectangle(point.getX() - 12, point.getY() - 6, 24, 20);
+        Rectangle body = new Rectangle(point.getX() - 15, point.getY() - 8, 30, 24);
         body.setArcWidth(4);
         body.setArcHeight(4);
         body.setFill(fill);
         body.setStroke(edge);
-        body.setStrokeWidth(2);
+        body.setStrokeWidth(2.2);
         group.getChildren().add(body);
 
-        Rectangle chimney = new Rectangle(point.getX() + 5, point.getY() - 14, 5, 10);
+        Rectangle chimney = new Rectangle(point.getX() + 7, point.getY() - 19, 6, 13);
         chimney.setFill(edge);
         chimney.setStroke(Color.web("#120d07"));
-        chimney.setStrokeWidth(1);
+        chimney.setStrokeWidth(1.1);
         group.getChildren().add(chimney);
 
-        Line window = new Line(point.getX() - 6, point.getY() + 4, point.getX() + 6, point.getY() + 4);
+        Line window = new Line(point.getX() - 8, point.getY() + 5, point.getX() + 8, point.getY() + 5);
         window.setStroke(edge);
-        window.setStrokeWidth(1.5);
+        window.setStrokeWidth(1.8);
         group.getChildren().add(window);
 
         getChildren().add(group);
@@ -389,7 +479,7 @@ public final class HexBoard extends Pane {
     private Point2D resolveHarborOutward(Harbor harbor, Point2D midpoint) {
         List<HexTile> adjacentTiles = harbor.getAttachedPath().getAdjacentTiles();
         if (adjacentTiles.size() == 1) {
-            Point2D tileCenter = tileCenters.get(adjacentTiles.getFirst().getId());
+            Point2D tileCenter = tileCenters.get(adjacentTiles.get(0).getId());
             if (tileCenter != null) {
                 Point2D vector = midpoint.subtract(tileCenter);
                 if (vector.magnitude() > 0) {
@@ -401,6 +491,113 @@ public final class HexBoard extends Pane {
         Point2D boardCenter = new Point2D(boardWidth / 2.0, boardHeight / 2.0);
         Point2D vector = midpoint.subtract(boardCenter);
         return vector.magnitude() == 0 ? new Point2D(0, -1) : vector.normalize();
+    }
+
+    private Point2D harborCoastAnchor(Point2D endpoint, Point2D midpoint, Point2D outward) {
+        Point2D alongCoast = midpoint.subtract(endpoint);
+        if (alongCoast.magnitude() == 0) {
+            return endpoint;
+        }
+        return endpoint
+                .add(alongCoast.normalize().multiply(HARBOR_COAST_INSET))
+                .add(outward.multiply(HARBOR_COAST_OUTSET));
+    }
+
+    private double harborAngle(Harbor harbor) {
+        Point2D a = intersectionPoints.get(harbor.getAttachedPath().getEndpointA().getId());
+        Point2D b = intersectionPoints.get(harbor.getAttachedPath().getEndpointB().getId());
+        if (a == null || b == null) {
+            return 0;
+        }
+        Point2D midpoint = a.midpoint(b);
+        Point2D center = boardCenter();
+        return Math.atan2(midpoint.getY() - center.getY(), midpoint.getX() - center.getX());
+    }
+
+    private Point2D placeHarborSign(
+            Point2D baseCenter,
+            Point2D tangentialOutward,
+            Point2D outward,
+            double width,
+            double height,
+            List<HarborBounds> occupiedSigns
+    ) {
+        Point2D candidate = clampHarborSign(baseCenter, width, height);
+
+        for (int step = 0; step < 10; step++) {
+            HarborBounds bounds = HarborBounds.of(candidate, width, height);
+            boolean collides = occupiedSigns.stream().anyMatch(bounds::intersects);
+            if (!collides) {
+                return candidate;
+            }
+
+            candidate = candidate.add(tangentialOutward.multiply(HARBOR_COLLISION_STEP));
+            if (step % 2 == 1) {
+                candidate = candidate.add(outward.multiply(10));
+            }
+            candidate = clampHarborSign(candidate, width, height);
+        }
+
+        return candidate;
+    }
+
+    private Point2D clampHarborSign(Point2D center, double width, double height) {
+        double x = Math.max(width / 2.0 + HARBOR_EDGE_PADDING,
+                Math.min(center.getX(), boardWidth - width / 2.0 - HARBOR_EDGE_PADDING));
+        double y = Math.max(height / 2.0 + HARBOR_EDGE_PADDING,
+                Math.min(center.getY(), boardHeight - height / 2.0 - HARBOR_EDGE_PADDING));
+        return new Point2D(x, y);
+    }
+
+    private void drawHarborDock(Point2D start, Point2D direction) {
+        Point2D dir = direction.magnitude() == 0 ? new Point2D(0, -1) : direction.normalize();
+        Point2D end = start.add(dir.multiply(HARBOR_DOCK_LENGTH));
+        Point2D normal = new Point2D(-dir.getY(), dir.getX());
+
+        Line deckShadow = new Line(start.getX() + 1.5, start.getY() + 2, end.getX() + 1.5, end.getY() + 2);
+        deckShadow.setStroke(Color.color(0, 0, 0, 0.22));
+        deckShadow.setStrokeWidth(12);
+        deckShadow.setStrokeLineCap(StrokeLineCap.BUTT);
+        getChildren().add(deckShadow);
+
+        Line deck = new Line(start.getX(), start.getY(), end.getX(), end.getY());
+        deck.setStroke(Color.web("#c98a36"));
+        deck.setStrokeWidth(11);
+        deck.setStrokeLineCap(StrokeLineCap.BUTT);
+        getChildren().add(deck);
+
+        for (int slat = 1; slat <= 4; slat++) {
+            Point2D center = start.add(dir.multiply(6 + slat * 6.2));
+            Point2D edgeA = center.add(normal.multiply(4.8));
+            Point2D edgeB = center.subtract(normal.multiply(4.8));
+            Line slatLine = new Line(edgeA.getX(), edgeA.getY(), edgeB.getX(), edgeB.getY());
+            slatLine.setStroke(Color.web("#8b5a22"));
+            slatLine.setStrokeWidth(1.8);
+            slatLine.setStrokeLineCap(StrokeLineCap.ROUND);
+            getChildren().add(slatLine);
+        }
+    }
+
+    private Point2D boardCenter() {
+        return new Point2D(boardWidth / 2.0, boardHeight / 2.0);
+    }
+
+    private boolean isCoastalIntersection(Intersection intersection) {
+        return intersection.getConnectedPaths().stream().anyMatch(Path::isCoastalPath);
+    }
+
+    private double polarAngle(Point2D point) {
+        Point2D center = boardCenter();
+        return Math.atan2(point.getY() - center.getY(), point.getX() - center.getX());
+    }
+
+    private Point2D pushOutwardFromCenter(Point2D point) {
+        Point2D center = boardCenter();
+        Point2D vector = point.subtract(center);
+        if (vector.magnitude() == 0) {
+            return point;
+        }
+        return point.add(vector.normalize().multiply(SHORE_OUTSET));
     }
 
     private Point2D insetPoint(Point2D anchor, Point2D other, double inset) {
@@ -435,16 +632,42 @@ public final class HexBoard extends Pane {
         return Color.web("#ddd3bc");
     }
 
-    private String abbreviateHarborName(String name) {
-        if (name == null || name.isBlank()) {
-            return "";
+    private Group createHarborIcon(Harbor harbor) {
+        Group group = new Group();
+        if (harbor instanceof SpecificHarbor specificHarbor) {
+            Group icon = ResourceIcons.of(resourceIconKind(specificHarbor.getSpecificResource()));
+            icon.setScaleX(0.8);
+            icon.setScaleY(0.8);
+            centerGroup(icon, 0, 0);
+            group.getChildren().add(icon);
+            return group;
         }
 
-        String[] parts = name.split("\\s+");
-        if (parts.length == 1) {
-            return parts[0].toUpperCase();
-        }
-        return parts[0].toUpperCase();
+        Text generic = new Text("↔");
+        generic.setFont(Font.font("Georgia", FontWeight.BOLD, 14));
+        generic.setFill(Color.web("#21140a"));
+        generic.setX(-generic.getLayoutBounds().getWidth() / 2.0);
+        generic.setY(-generic.getLayoutBounds().getCenterY());
+        group.getChildren().add(generic);
+        return group;
+    }
+
+    private ResourceIcons.Kind resourceIconKind(ResourceType type) {
+        return switch (type) {
+            case WOOD -> ResourceIcons.Kind.WOOD;
+            case BRICK -> ResourceIcons.Kind.BRICK;
+            case WHEAT -> ResourceIcons.Kind.WHEAT;
+            case ORE -> ResourceIcons.Kind.ORE;
+            case BANANA -> ResourceIcons.Kind.BANANA;
+        };
+    }
+
+    private void centerGroup(Group group, double centerX, double centerY) {
+        group.applyCss();
+        group.autosize();
+        group.layout();
+        group.setLayoutX(centerX - (group.getLayoutBounds().getMinX() + group.getLayoutBounds().getWidth() / 2.0));
+        group.setLayoutY(centerY - (group.getLayoutBounds().getMinY() + group.getLayoutBounds().getHeight() / 2.0));
     }
 
     private String findDefaultRobberTile(Board board) {
@@ -504,5 +727,23 @@ public final class HexBoard extends Pane {
     }
 
     private record TerrainVisual(Image image, Color fill, Color edge, String label) {
+    }
+
+    private record HarborBounds(double minX, double minY, double maxX, double maxY) {
+        static HarborBounds of(Point2D center, double width, double height) {
+            return new HarborBounds(
+                    center.getX() - width / 2.0,
+                    center.getY() - height / 2.0,
+                    center.getX() + width / 2.0,
+                    center.getY() + height / 2.0
+            );
+        }
+
+        boolean intersects(HarborBounds other) {
+            return minX < other.maxX
+                    && maxX > other.minX
+                    && minY < other.maxY
+                    && maxY > other.minY;
+        }
     }
 }
